# atlas

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  bump-version.sh  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-28-independent-terminal-theme.md
docs/superpowers/specs/: 2026-04-28-independent-terminal-theme-design.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_watchers.sql  0004_pin_order_and_recents.sql  0005_project_author.sql  0006_project_disk_bytes.sql  README.md
src-tauri/src/: crash.rs  events.rs  git.rs  lib.rs  metrics.rs  path_bootstrap.rs  sessions.rs  tray.rs  util.rs
src-tauri/src/commands/: collections.rs  disk.rs  editors.rs  files.rs  git.rs  mod.rs  notes.rs  palette.rs  pane_layout.rs  projects.rs  recents.rs  scripts.rs  sessions.rs  settings.rs  system.rs  tags.rs  templates.rs  terminal.rs  todos.rs  watchers.rs
src-tauri/src/editors/: mod.rs
src-tauri/src/scripts/: mod.rs  parser.rs  runner.rs
src-tauri/src/storage/: db.rs  discovery.rs  json.rs  mod.rs  settings.rs  sync.rs  templates.rs  types.rs
src-tauri/src/terminal/: mod.rs  pane.rs
src-tauri/src/watcher/: classifier.rs  mod.rs
src/components/: Icon.tsx  OnboardingEmpty.tsx  ProjectGrid.tsx  ProjectList.tsx  Sidebar.tsx  TitleBar.tsx  ToastHost.tsx
src/components/Inspector/: TabStates.tsx  TabStrip.tsx  index.tsx
src/components/Inspector/tabs/: Disk.tsx  Files.tsx  Notes.tsx  Overview.tsx  Scripts.tsx  Sessions.tsx  Todos.tsx  _shared.tsx
src/features/context-menu/: ContextMenu.tsx
src/features/help/: CheatSheetOverlay.tsx
src/features/inspector/: ids.ts
src/features/multi-select/: BulkActionBar.tsx
src/features/new-project/: NewProjectModal.tsx
src/features/notes/: NoteEditor.tsx  SlashMenu.tsx  slash-commands.ts
src/features/palette/: CommandPalette.tsx
src/features/settings/: SettingsPanel.tsx
src/features/terminal/: PaneHeader.tsx  TerminalPane.tsx  TerminalStrip.tsx  layout.ts
src/hooks/: useGlobalShortcuts.ts  useProjectEvents.ts  useTerminalEvents.ts  useTerminalProjectSync.ts
src/ipc/: index.ts
src/state/: store.ts
src/types/: index.ts  rust.ts
src/ui/: global.css  tokens.css
